<resources>
    <string name="app_name">Switches</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ego_fragment">EGO Fragment</string>
    <string name="addition_screen">Addition Fragment</string>
    <string name="subtraction_screen">Subtraction Fragment</string>"
    <string name="multiplication_screen">Multiplication Fragment</string>
    <string name="division_screen">Division Fragment</string>
    <string name="modulo_screen">Modulo Fragment</string>
    <string name="limit_five">You can only select up to 5 operations</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="modulo">Modulo</string>
    <string name="ego">Ego</string>
    <string name="enter_first_number">NUM 1</string>
    <string name="addition_symbol">addition icon</string>
    <string name="enter_second_number">NUM 2</string>
    <string name="result"> </string>
    <string name="operation_symbol">operation_symbol</string>
    <string name="equal_symbol">Equal symbol</string>
    <string name="addition_switch_label">addition switch label</string>
    <string name="subtraction_switch_label">sub switch label</string>
    <string name="multiplication_switch_label">mult switch label</string>
    <string name="division_switch_label">division switch label</string>
    <string name="modulo_switch_label">modulo switch label</string>
    <string name="ego_switch_label">ego switch label</string>

</resources>