<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_card"
    android:layout_margin="16dp"
    android:elevation="20dp"
    android:radius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/firstNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:gravity="center"
            android:hint="@string/enter_first_number"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/operationImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/operation_symbol"
            android:src="@drawable/ic_addition" />

        <EditText
            android:id="@+id/secondNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:gravity="center"
            android:hint="@string/enter_second_number"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/equal_symbol"
            android:src="@drawable/ic_equal" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/edittext_background"
            android:padding="8dp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
